--- a/IEvangelist.GitHub.Services/IEvangelist.GitHub.Services.csproj
+++ b/IEvangelist.GitHub.Services/IEvangelist.GitHub.Services.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>8.0</LangVersion>
+    <AssemblyVersion>1.1.0.0</AssemblyVersion>
   </PropertyGroup>
   
   <ItemGroup>
